根據功能區分了 Domain, Infrastructure, Application, Presentation.
Add Entity, and dto.

--- a/src/RBACSample/RBACSample.csproj
+++ b/src/RBACSample/RBACSample.csproj
@@ -26,4 +26,9 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Shared\Constants\" />
+	  <Folder Include="Shared\Extensions\" />
+	</ItemGroup>
+
 </Project>
